<?xml version="1.0" encoding="utf-8"?>
<!--Main Activity. The user can click either button and be redirected to either login or register.-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.stilloa2_loginandregister.MainActivity">


    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:onClick="l_onClick"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/for_constraints_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--Button for navigation to login activity.-->

    <Button
        android:id="@+id/register"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:onClick="r_onClick"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/for_constraints_only" />
    <!--Button for navigation to registration activity.-->

    <TextView
        android:id="@+id/for_constraints_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <!--TextView only present to place other elements relative to the center of the screen.-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="123dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mango"
        android:contentDescription="@string/content_descriptor"/>

</androidx.constraintlayout.widget.ConstraintLayout>